Fix scaled result overflow

--- a/app/styles/components/_display.sass
+++ b/app/styles/components/_display.sass
@@ -22,12 +22,14 @@
     bottom: 0
     height: $result-height
     line-height: $result-height
+    overflow: hidden
     position: absolute
     text-align: right
     width: 100%
 
   &__scaled-result
-    display: inline-block
+    display: table
     padding: 0 1rem
     transform-origin: left
     transition: .2s transform cubic-bezier(0.5, 0, 0.5, 2)
+    width: 100%
